# GeneticAlgorithm

./: GeneticAlgorithm.c  README.md
c++Dir/continuousGA/: .Chromosome.cpp.swp  .Chromosome.h.swp  .Population.cpp.swp  .Population.h.swp  .main.cpp.swp  .mainChrom.cpp.swp  CMakeLists.txt  Chromosome.cpp  Chromosome.h  GenAlg.cpp  Population.cpp  Population.h  build.sh  doubleGen.cpp  function.cpp  function.h  main.cpp  mainChrom.cpp  makefile
c++Dir/continuousGA/data/Ellipsoid/: avg_output.txt  output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output20.txt  output21.txt  output22.txt  output23.txt  output24.txt  output25.txt  output26.txt  output27.txt  output28.txt  output29.txt  output3.txt  output30.txt  output31.txt  output32.txt  output33.txt  output34.txt  output35.txt  output36.txt  output37.txt  output38.txt  output39.txt  output4.txt  output40.txt  output41.txt  output42.txt  output43.txt  output44.txt  (+11 more)
c++Dir/continuousGA/data/Griewank/: avg_output.txt  output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output20.txt  output21.txt  output22.txt  output23.txt  output24.txt  output25.txt  output26.txt  output27.txt  output28.txt  output29.txt  output3.txt  output30.txt  output31.txt  output32.txt  output33.txt  output34.txt  output35.txt  output36.txt  output37.txt  output38.txt  output39.txt  output4.txt  output40.txt  output41.txt  (+14 more)
(+34 files in other folders)
